--- a/mobile.html
+++ b/mobile.html
@@ -7,13 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>111</title>
-    <meta property="fb:app_id" content="126078171292770" />
+    <meta property="fb:app_id" content="1458624817527934" />
     <meta property="og:site_name" content="宝马M3" />
     <meta property="og:title" content="宝马M3" />
     <meta name="description" content="宝马M3的4.0升V8引擎由宝马M5轿车移植而来，它是具有F1赛车技术的发动机，采用每缸4气门设计，最大功率达到431kw/8300rpm，最大扭矩为400Nm/6500rpm，发动机最高转速为 8300 rpm，在2000rpm时，就可以输出340Nm的动力。" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://static.gongminghua.site/case/facebook-demo/mobile.html?app_id=126078171292770&display=touch&href=http://static.gongminghua.site/case/facebook-demo/mobile.html&redirect_uri=http://static.gongminghua.site/case/facebook-demo/mobile.html" />
-    <meta property="og:image" content="http://static.gongminghua.site/case/facebook-demo/test.jpg" />
+    <meta property="og:url" content="https://olliesk8.github.io/facebook-demo/mobile.html?app_id=1458624817527934&display=touch&href=https://olliesk8.github.io/facebook-demo/mobile.html&redirect_uri=https://olliesk8.github.io/facebook-demo/mobile.html" />
+    <meta property="og:image" content="https://olliesk8.github.io/facebook-demo/images/bmw-m3.jpg" />
     <meta property="og:locale" content="en_US" />
 	<style type="text/css">
 		body{margin:0;height:0}
@@ -32,7 +32,7 @@
     window.fbAsyncInit = function() {
 	
         FB.init({
-            appId      : '126078171292770',
+            appId      : '1458624817527934',
             xfbml      : true,
             version    : 'v2.9'
         });
