--- a/mobile.html
+++ b/mobile.html
@@ -13,7 +13,6 @@
     <meta name="description" content="宝马M3的4.0升V8引擎由宝马M5轿车移植而来，它是具有F1赛车技术的发动机，采用每缸4气门设计，最大功率达到431kw/8300rpm，最大扭矩为400Nm/6500rpm，发动机最高转速为 8300 rpm，在2000rpm时，就可以输出340Nm的动力。" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://olliesk8.github.io/facebook-demo/mobile.html?app_id=1458624817527934&display=touch&href=https://olliesk8.github.io/facebook-demo/mobile.html&redirect_uri=https://olliesk8.github.io/facebook-demo/mobile.html" />
-    <meta property="og:image" content="https://www.topgear.com/sites/default/files/styles/16x9_192w/public/news-listicle/image/2017/06/18my_brz_ts_.jpg?itok=d8SplHz6%20192w,%20https://www.topgear.com/sites/default/files/styles/16x9_300w/public/news-listicle/image/2017/06/18my_brz_ts_.jpg?itok=msu3eRpP%20300w,%20https://www.topgear.com/sites/default/files/styles/16x9_455w/public/news-listicle/image/2017/06/18my_brz_ts_.jpg?itok=HVkH7Yan%20455w,%20https://www.topgear.com/sites/default/files/styles/16x9_600w/public/news-listicle/image/2017/06/18my_brz_ts_.jpg?itok=vJJnvoFC%20600w,%20https://www.topgear.com/sites/default/files/styles/16x9_630w/public/news-listicle/image/2017/06/18my_brz_ts_.jpg?itok=ak3brtVz%20630w,%20https://www.topgear.com/sites/default/files/styles/16x9_910w/public/news-listicle/image/2017/06/18my_brz_ts_.jpg?itok=A_kdzT08%20910w,%20https://www.topgear.com/sites/default/files/styles/16x9_1260w/public/news-listicle/image/2017/06/18my_brz_ts_.jpg?itok=j5QDGaaN%201260w" />
     <meta property="og:locale" content="en_US" />
 	<style type="text/css">
 		body{margin:0;height:0}
@@ -41,7 +40,8 @@
             FB.ui({
                 method: 'share',
                 mobile_iframe: true,
-                href: window.location.href
+                href: window.location.href,
+                picture: 'https://www.topgear.com/sites/default/files/styles/16x9_300w/public/news-listicle/image/2017/06/18my_brz_ts_.jpg',
             }, function(response){
                 if (response && !response.error_message) {
                     console.log('Posting completed.');
