--- a/mobile.html
+++ b/mobile.html
@@ -41,7 +41,7 @@
                 method: 'share',
                 mobile_iframe: true,
                 href: window.location.href,
-                picture: 'https://www.topgear.com/sites/default/files/styles/16x9_300w/public/news-listicle/image/2017/06/18my_brz_ts_.jpg',
+                picture: 'https://www.topgear.com/sites/default/files/styles/16x9_300w/public/news-listicle/image/2017/06/18my_brz_ts_.jpg'
             }, function(response){
                 if (response && !response.error_message) {
                     console.log('Posting completed.');
