--- a/mobile2.html
+++ b/mobile2.html
@@ -13,7 +13,7 @@
     <meta name="description" content="宝马M3的4.0升V8引擎由宝马M5轿车移植而来，它是具有F1赛车技术的发动机，采用每缸4气门设计，最大功率达到431kw/8300rpm，最大扭矩为400Nm/6500rpm，发动机最高转速为 8300 rpm，在2000rpm时，就可以输出340Nm的动力。" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://olliesk8.github.io/facebook-demo/mobile.html?app_id=1458624817527934&display=touch&href=https://olliesk8.github.io/facebook-demo/mobile.html&redirect_uri=https://olliesk8.github.io/facebook-demo/mobile.html" />
-    <meta property="og:image" content="https://www.topgear.com/sites/default/files/styles/16x9_300w/public/news-listicle/image/2017/06/18my_brz_ts_.jpg" />
+    <meta property="og:image:secure_url" content="https://www.topgear.com/sites/default/files/styles/16x9_300w/public/news-listicle/image/2017/06/18my_brz_ts_.jpg" />
     <meta property="og:locale" content="en_US" />
 	<style type="text/css">
 		body{margin:0;height:0}
